Pull build-test-push workflow into bakery-build

--- a/.github/workflows/bakery-build.yml
+++ b/.github/workflows/bakery-build.yml
@@ -18,14 +18,36 @@ on:
         default: "."
         required: false
         type: string
-    # TODO: Remove secret requirements once repository is public
+      dev-versions:
+        description: "Dev version builds [default: exclude] [options: include, exclude, only]"
+        default: "exclude"
+        required: false
+        type: string
+      push:
+        description: "Whether to push images to registries [default: false]"
+        default: false
+        required: false
+        type: boolean
+      runs-on:
+        description: "The type of runner to use [default: ubuntu-latest]"
+        default: "ubuntu-latest"
+        required: false
+        type: string
     secrets:
+      DOCKER_HUB_ACCESS_TOKEN:
+        description: "Docker Hub Access Token [required if pushing]"
+        required: false
+      # TODO: Remove secret requirements once repository is public
       APP_ID:
         description: "GitHub App ID with access to posit-dev repositories"
         required: true
       APP_PRIVATE_KEY:
         description: "GitHub App private key with access to posit-dev repositories"
         required: true
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
   matrix:
@@ -57,24 +79,96 @@ jobs:
       - name: Images
         id: images
         run: |
-          echo "matrix=$(bakery --quiet ci matrix --dev-versions exclude --context ${{ inputs.context }} | jq --compact-output .)" >> $GITHUB_OUTPUT
+          echo "matrix=$(bakery --quiet ci matrix --dev-versions ${{ inputs.dev-versions }} --context ${{ inputs.context }} | jq --compact-output .)" >> $GITHUB_OUTPUT
 
       - name: Output
         run: |
           echo "Images: ${{ steps.images.outputs.matrix }}"
 
   build:
-    name: ${{ matrix.img.image }} v${{ matrix.dev && 'dev-' || '' }}${{ ${{ matrix.img.version }}
+    name: "${{ matrix.img.image }}:${{ matrix.img.version }}"
     needs: matrix
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runs-on }}
     strategy:
       fail-fast: false
       matrix:
         img: ${{ fromJson(needs.matrix.outputs.matrix) }}
 
     steps:
-      - name: Version
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          owner: posit-dev
+          repositories: images-shared
+
+      - name: Setup Bakery
+        uses: "posit-dev/images-shared/setup-bakery@ci-workflow"
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+        with:
+          version: ${{ inputs.version }}
+
+      - name: Setup Goss and Dgoss
+        uses: "posit-dev/images-shared/setup-goss@ci-workflow"
+
+      - name: Setup just
+        uses: extractions/setup-just@v3
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        if: ${{ inputs.push }}
+        uses: docker/login-action@v3
+        with:
+          username: "posit"
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        if: ${{ inputs.push }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build
+        env:
+          GIT_SHA: ${{ github.sha }}
         run: |
-          echo "Image: ${{ matrix.img.image }}"
-          echo "Version: ${{ matrix.img.version }}"
-          echo "Dev: ${{ matrix.img.dev }}"
+          bakery build --load \
+            --image-name ${{ matrix.img.image }} \
+            --image-version ${{ matrix.img.version }} \
+            --dev-versions ${{ inputs.dev-versions }} \
+            --context ${{ inputs.context }}
+
+
+      - name: Test
+        run: |
+          GOSS_PATH=${GITHUB_WORKSPACE}/tools/goss \
+          DGOSS_PATH=${GITHUB_WORKSPACE}/tools/dgoss \
+          bakery run dgoss \
+            --image-name ${{ matrix.img.image }} \
+            --image-version ${{ matrix.img.version }} \
+            --dev-versions ${{ inputs.dev-versions }} \
+            --context ${{ inputs.context }}
+
+      - name: Push
+        # Since this is a reusable workflow, we need to be very explicit about
+        # when to push the images. We default to not pushing images, so the
+        # calling workflow must explicitly request pushing images.
+        if: ${{ inputs.push }}
+        env:
+          GIT_SHA: ${{ github.sha }}
+        run: |
+          bakery build --push \
+            --image-name ${{ matrix.img.image }} \
+            --image-version ${{ matrix.img.version }} \
+            --dev-versions ${{ inputs.dev-versions }} \
+            --context ${{ inputs.context }}
