--- a/setup-bakery/action.yml
+++ b/setup-bakery/action.yml
@@ -10,6 +10,10 @@ inputs:
     description: "The version of Python to use"
     required: false
     default: "3.x"
+  setup-goss:
+    description: "Whether to install goss and dgoss tools"
+    required: false
+    default: "false"
 
 runs:
   using: "composite"
@@ -19,8 +23,7 @@ runs:
       with:
         python-version: "${{ inputs.python-version }}"
 
-    # Relies on the GITHUB_TOKEN environment variable
-    - name: Install Bakery
+    - name: Check Token
       shell: bash
       run: |
         if [ -z "${GITHUB_TOKEN}" ]; then
@@ -28,5 +31,9 @@ runs:
           exit 1
         fi
 
+    # Relies on the GITHUB_TOKEN environment variable
+    - name: Install Bakery
+      shell: bash
+      run: |
         gh auth setup-git
         pipx install "git+https://github.com/posit-dev/images-shared.git@${{ inputs.version }}#subdirectory=posit-bakery&egg=posit-bakery"
