--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,10 +83,10 @@ jobs:
           files: ./posit-bakery/results.xml
 
   bakery:
-    name: Bakery Build
+    name: Bakery
     permissions:
       contents: read
-      packages: read
+      packages: write
 
     uses: "./.github/workflows/bakery-build.yml"
     secrets:
