--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "jinja2~=3.1.6",
     "rich~=14.1.0",
     "gitpython~=3.1.45",
-    "pydantic[email]~=2.11.7",
+    "pydantic[email] (>=2.0,<3.0)",
     "python-on-whales (>=0.77.0,<0.78.0)",
     "ruamel-yaml (>=0.18.14,<0.19.0)",
     "requests (>=2.32.5,<3.0.0)",
