--- a/posit-bakery/pyproject.toml
+++ b/posit-bakery/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "requests-cache (>=1.2.1,<2.0.0)",
     "packaging (>=25.0,<26.0)",
+    "pygithub (>=2.8.1,<3.0.0)",
 ]
 dynamic = ["version"]
 
