--- a/.github/workflows/clean-caches.yml
+++ b/.github/workflows/clean-caches.yml
@@ -82,4 +82,4 @@ jobs:
         run: |
           bakery "ghcr.io/${{ github.repository_owner }}" \
             --context ${{ inputs.context }} \
-            ${{ inputs.dry-run && "--dry-run" }} ${{ !inputs.remove-dangling && "--no-untagged" }} ${{ inputs.remove-older-than > 0 && "--older-than " + inputs.remove-older-than }}
+            ${{ inputs.dry-run && '--dry-run' }} ${{ !inputs.remove-dangling && '--no-untagged' }} ${{ inputs.remove-older-than > 0 && format('--older-than {0}', inputs.remove-older-than) }}
