--- a/.github/workflows/clean-caches.yml
+++ b/.github/workflows/clean-caches.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Clean caches
         env:
-          GIT_SHA: ${{ github.sha }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # FIXME: Currently pushes to ghcr.io for caching. Needs to be conditional
         run: |
           bakery clean cache-registry "ghcr.io/${{ github.repository_owner }}" \
