--- a/posit-bakery/test/resources/multiplatform/bakery.yaml
+++ b/posit-bakery/test/resources/multiplatform/bakery.yaml
@@ -17,7 +17,7 @@ registries:
     namespace: "posit-dev"
 
 images:
-  - name: "test-image"
+  - name: "test-multi"
     versions:
       - name: 1.0.0
         latest: true
