--- a/posit-bakery/test/resources/multiplatform/bakery.yaml
+++ b/posit-bakery/test/resources/multiplatform/bakery.yaml
@@ -11,8 +11,6 @@ repository:
       email: "author2@posit.co"
 
 registries:
-  - host: "docker.io"
-    namespace: "posit"
   - host: "ghcr.io"
     namespace: "posit-dev"
 
@@ -22,11 +20,14 @@ images:
       - name: 1.0.0
         latest: true
         os:
-          - name: Ubuntu 22.04
+          - name: Ubuntu 24.04
             primary: true
             platforms:
               - "linux/amd64"
               - "linux/arm64"
+          - name: Ubuntu 22.04
+            platforms:
+              - "linux/amd64"
     variants:
       - name: "Minimal"
         extension: "min"
