--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,18 +101,33 @@ jobs:
           files: ./posit-bakery/results.xml
 
   bakery:
-    name: Bakery
+    name: Bakery Build
     permissions:
       contents: read
       packages: write
 
-    uses: "./.github/workflows/bakery-build.yml"
+    uses: "bakery-build-native.yml"
     secrets:
       APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
     with:
       version: ${{ github.head_ref || github.ref_name }}
       context: "./posit-bakery/test/resources/with-macros/"
+      dev-versions: include
+
+  bakery-native:
+    name: Bakery Native Build
+    permissions:
+      contents: read
+      packages: write
+
+    uses: "bakery-build-native.yml"
+    secrets:
+      APP_ID: ${{ secrets.APP_ID }}
+      APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
+    with:
+      version: ${{ github.head_ref || github.ref_name }}
+      context: "./posit-bakery/test/resources/multiplatform/"
       dev-versions: include
 
   release:
