--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
       contents: read
       packages: write
 
-    uses: "bakery-build-native.yml"
+    uses: "./.github/workflows/bakery-build.yml"
     secrets:
       APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
@@ -122,7 +122,7 @@ jobs:
       contents: read
       packages: write
 
-    uses: "bakery-build-native.yml"
+    uses: "./.github/workflows/bakery-build-native.yml"
     secrets:
       APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
