--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -28,6 +28,21 @@ on:
         default: false
         required: false
         type: boolean
+      runs-on:
+        description: "The type of runner to use [default: ubuntu-latest]"
+        default: "ubuntu-latest"
+        required: false
+        type: string
+      amd64-builder:
+        description: "The type of runner to use for amd64 builds [default: ubuntu-latest-4x]"
+        default: "ubuntu-latest-4x"
+        required: false
+        type: string
+      arm64-builder:
+        description: "The type of runner to use for arm64 builds [default: ubuntu-24.04-arm64-4-core]"
+        default: "ubuntu-24.04-arm64-4-core"
+        required: false
+        type: string
     secrets:
       DOCKER_HUB_ACCESS_TOKEN:
         description: "Docker Hub Access Token [required if pushing]"
@@ -40,11 +55,6 @@ on:
         description: "GitHub App private key with access to posit-dev repositories"
         required: true
 
-env:
-  DEFAULT_RUNNER: ubuntu-latest
-  AMD64_RUNNER: ubuntu-latest-4x
-  ARM64_RUNNER: ubuntu-24.04-arm64-4-core
-
 defaults:
   run:
     shell: bash
@@ -52,7 +62,7 @@ defaults:
 jobs:
   matrix:
     name: Image Matrix
-    runs-on: ${{ env.DEFAULT_RUNNER }}
+    runs-on: ${{ inputs.runs-on }}
     outputs:
       platform-matrix: ${{ steps.images-by-platform.outputs.platform_matrix }}
       versions-matrix: ${{ steps.images-by-version.outputs.versions_matrix }}
@@ -94,7 +104,7 @@ jobs:
       fail-fast: false
       matrix:
         img: ${{ fromJson(needs.matrix.outputs.platform-matrix) }}
-    runs-on: ${{ matrix.img.platform == 'linux/arm64' && env.ARM64_RUNNER || env.AMD64_RUNNER }}
+    runs-on: ${{ matrix.img.platform == 'linux/arm64' && inputs.arm64-builder || inputs.amd64-builder }}
 
     steps:
       - name: Checkout
@@ -191,7 +201,7 @@ jobs:
       fail-fast: false
       matrix:
         img: ${{ fromJson(needs.matrix.outputs.versions-matrix) }}
-    runs-on: ${{ env.DEFAULT_RUNNER }}
+    runs-on: ${{ inputs.runs-on }}
 
     steps:
       - name: Checkout
