--- a/.github/workflows/bakery-build.yml
+++ b/.github/workflows/bakery-build.yml
@@ -113,8 +113,8 @@ jobs:
       - name: Setup goss
         uses: "posit-dev/images-shared/setup-goss@main"
 
-      - name: Setup just
-        uses: extractions/setup-just@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Setup docker buildx
         uses: docker/setup-buildx-action@v3
