Fix branch for setup goss

--- a/.github/workflows/bakery-build-native.yml
+++ b/.github/workflows/bakery-build-native.yml
@@ -234,7 +234,7 @@ jobs:
           version: ${{ inputs.version }}
 
       - name: Setup goss
-        uses: "posit-dev/images-shared/setup-goss@main"
+        uses: "posit-dev/images-shared/setup-goss@ci-native-multiplatform"
 
       - name: Set up Docker
         uses: docker/setup-docker-action@v4
