--- a/posit-bakery/test/testdata/valid/complex.yaml
+++ b/posit-bakery/test/testdata/valid/complex.yaml
@@ -130,6 +130,8 @@ images:
         subpath: "2024.11.0"
         os:
           - name: "Ubuntu 22.04"
+            platforms:
+              - "linux/amd64"
             primary: true
         dependencies:
           - dependency: R
